--- a/app/views/admin_sections/list_stories.html.erb
+++ b/app/views/admin_sections/list_stories.html.erb
@@ -5,7 +5,7 @@
       <a href="<%= list_stories_path(:status => 'All')%>" class="btn btn-secondary rounded-0 <%= !(params.has_key?(:status)) || params[:status] == 'All' ? 'active' : ''%>">All</a>
       <a href="<%= list_stories_path(:status => 'Submitted')%>" class="btn btn-secondary rounded-0 <%= !params[:status].nil? and params[:status] == 'Submitted' ? 'active' : ''%>">Submitted</a>
       <a href="<%= list_stories_path(:status => 'In Review')%>" class="btn btn-secondary rounded-0 <%= !params[:status].nil? and params[:status] == 'In Review' ? 'active' : ''%>">In Review</a>
-      <a href="<%= list_stories_path(:status => 'Need Correction')%>" class="btn btn-secondary rounded-0 <%= !params[:status].nil? and params[:status] == 'Need Correction' ? 'active' : ''%>">Need Correction</a>
+      <a href="<%= list_stories_path(:status => 'Rejected')%>" class="btn btn-secondary rounded-0 <%= !params[:status].nil? and params[:status] == 'Rejected' ? 'active' : ''%>">Rejected</a>
       <a href="<%= list_stories_path(:status => 'Published')%>" class="btn btn-secondary rounded-0 <%= !params[:status].nil? and params[:status] == 'Published' ? 'active' : ''%>">Published</a>
     </div>
   </div>
@@ -17,9 +17,8 @@
       <tr>
         <th>Title</th>
         <th>Author</th>
-        <th>Submitted at</th>
         <th>Status</th>
-        <th colspan="3">Operations</th>
+        <th class="text-center">Operations</th>
       </tr>
     </thead>
     <tbody>
@@ -30,14 +29,14 @@
       <% else %>
         <% @stories.each do |story| %>
           <tr>
-            <td><%= story.title%></td>
-            <td><%= story.user.full_name %></td>
-            <td><%= story.created_at.strftime('%B %d, %Y %I:%M %p') %></td>
-            <td><%= story.status%></td>
-            <td><%= link_to "View", story_path(story), class: "btn-sm btn-primary" %></td>
-            <td><%= link_to "Edit", edit_story_path(story), class: "btn-sm btn-primary" %>
+            <td style="max-width: 300px;">
+              <%= story.title%><hr class="mt-1 mb-1">
+              <%= story.status_badge%><br>
+              <small class="float-left mt-1">Likes: <span id="story-<%= story.id %>-like"><%= story.like %></span>, Comments: <%= story.comments.count %></small>
             </td>
-            <td><%= link_to "Delete", story_path(story), data: { confirm: "Are you sure?" }, method: :delete, class: "btn-sm btn-danger"  %>
+            <td><%= story.user.full_name %><br><small>Submitted at: <%= story.submitted_at.strftime('%B %d, %Y %I:%M %p') %></small></td>
+            <td><%= story.status_badge%></td>
+            <td class="text-center"><%= link_to '<i class="fas fa-eye" title="View"></i>'.html_safe, story_path(story) %> <%= link_to '<i class="fas fa-edit ml-1" title="Edit"></i>'.html_safe, edit_story_path(story) %>
             </td>
           </tr>
         <% end %>
